# Futuricty_PF

./: .gitignore  Kelompok2.md  Kelompok2_Futuricty_Tugas Besar.md
Futuricty_PF/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json
Futuricty_PF/src/: App.css  App.tsx  index.css
Futuricty_PF/src/components/: CacheManager.tsx  ControlPanel.tsx  LanguageProvider.tsx  LanguageToggle.tsx  LiveabilityScore.tsx  LocationSearch.tsx  Map.tsx  ThemeProvider.tsx  ThemeToggle.tsx
Futuricty_PF/src/components/ui/: switch.tsx
Futuricty_PF/src/pages/: Index.tsx
Futuricty_PF/src/services/: cacheService.ts  livabilityService.ts  reportService.ts  searchHistoryService.ts
Futuricty_PF/src/types/: jspdf.d.ts
backend/: Cargo.toml
backend/config/: category_patterns.json  queries.json  scoring_config.json
backend/src/: main.rs  models.rs
backend/src/services/: category_detection.rs  mod.rs  overpass.rs  score_calculator.rs
